package splendor.tokens;

public enum GemToken {
    RUBY,
    EMERALD,
    DIAMOND,
    SAPPHIRE,
    ONYX,
    GOLD
}